Added list of songs and an image to new page

--- a/css/music.css
+++ b/css/music.css
@@ -8,6 +8,12 @@ h1 {
 }
 
 a {
+  font-size: 30px;
+  color: darkblue;
+  text-decoration: none;
+}
+
+a.home {
   font-size: 35px;
   color: darkmagenta;
   text-decoration: none;
@@ -15,10 +21,21 @@ a {
   border-style: line;
   border-color: black;
 }
+
 a:hover {
   color: blue;
 }
 
-ul {
-  display: inline-flex;
+li {
+  list-style-position: inside;
+  margin-bottom: 20px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  height: 400px;
+  object-fit: contain;
 }
