--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,12 @@ a:hover {
   color: blue;
 }
 
-li {
-  padding-right: 10px;
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  width: 125px;
+  height: 125px;
+  object-fit: contain;
 }
