Added images of my favorite shows

--- a/css/shows.css
+++ b/css/shows.css
@@ -3,6 +3,12 @@ body {
   background-color: darkgoldenrod;
 }
 
+img {
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+}
+
 a.home {
   font-size: 35px;
   color: darkmagenta;
