--- a/css/shows.css
+++ b/css/shows.css
@@ -4,6 +4,10 @@ body {
 }
 
 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
   width: 500px;
   height: 500px;
   object-fit: contain;
